2048-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-run
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-run
  template:
    metadata:
      labels:
        app: hello-run
    spec:
      containers:
      - name: hello-run
        image: 798644228695.dkr.ecr.ap-south-1.amazonaws.com/hello-run:3
        ports:
        - containerPort: 80
