2048-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-run-service
spec:
  selector:
    app: hello-run
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
